--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -31,10 +31,14 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+   - name: Setup Gradle 
+      uses: gradle/actions/setup-gradle@v3 
+      with: 
+         build-scan-publish: true 
+         build-scan-terms-of-use-url: "https://gradle.com/terms-of-service" 
+         build-scan-terms-of-use-agree: "yes" 
 
-    - name: Build with Gradle
+   - name: Build with Gradle
       run: ./gradlew build
 
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
