--- a/.github/workflows/jarBuilder.yml
+++ b/.github/workflows/jarBuilder.yml
@@ -16,6 +16,8 @@ jobs:
       with:
         distribution: 'corretto'
         java-version: 20
+    - name: Change wrapper permissions
+      run: chmod +x ./gradlew
     - name: Cache Gradlew packages
       uses: actions/cache@v4
       with:
