--- a/.github/workflows/jarBuilder.yml
+++ b/.github/workflows/jarBuilder.yml
@@ -16,13 +16,9 @@ jobs:
       with:
         distribution: 'corretto'
         java-version: 20
+        cache: 'gradle'
     - name: Change wrapper permissions
       run: chmod +x ./gradlew
-    - name: Cache Gradlew packages
-      uses: actions/cache@v4
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
     - name: Build jar
       run: ./gradlew build
     - name: Upload jar file
