--- a/.github/workflows/jarBuilder.yml
+++ b/.github/workflows/jarBuilder.yml
@@ -16,9 +16,9 @@ jobs:
       with:
         distribution: 'corretto'
         java-version: 20
-        cache: 'gradle'
-    - name: Change wrapper permissions
-      run: chmod +x ./gradlew
+        cache: 'gradle'  
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
     - name: Build jar
       run: ./gradlew build
     - name: Upload jar file
