--- a/.github/workflows/jarBuilder.yml
+++ b/.github/workflows/jarBuilder.yml
@@ -17,7 +17,9 @@ jobs:
         distribution: 'corretto'
         java-version: 20
     - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4      
+      uses: gradle/actions/setup-gradle@v4    
+    - name: List files
+      run: ls -hlas
     - name: Change wrapper permissions
       run: chmod +x ./gradlew
     - name: Build jar
