--- a/.github/workflows/jarBuilder.yml
+++ b/.github/workflows/jarBuilder.yml
@@ -18,12 +18,8 @@ jobs:
         java-version: 20
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4    
-    - name: List files
-      run: ls -hlas
-    - name: Change wrapper permissions
-      run: chmod +x ./gradlew
     - name: Build jar
-      run: ./gradlew build
+      run: gradle build
     - name: Upload jar file
       uses: actions/upload-artifact@v4
       with:
