--- a/.github/workflows/jarBuilder.yml
+++ b/.github/workflows/jarBuilder.yml
@@ -23,5 +23,5 @@ jobs:
     - name: Upload jar file
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ env.date_today }} - ${{ env.repository_name }} - Jar
+        name: ${date +'%Y-%m-%d'} - ${{ github.repository }} - Jar
         path: build/libs/MensMorris-backend-all.jar
